--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,15 +1,21 @@
 {
+    "parser": "@babel/eslint-parser",
+    "parserOptions": {
+      "sourceType": "module",
+      "allowImportExportEverywhere": true,
+      "ecmaVersion": "latest"
+    },
     "env": {
         "browser": true,
-        "commonjs": true,
-        "es2021": true
+        "node":true,
+        "jest": true,
+        "es6": true
     },
     "extends": "google",
     "overrides": [
     ],
-    "parserOptions": {
-        "ecmaVersion": "latest"
-    },
     "rules": {
-    }
+        "indent": [2, 2, { "SwitchCase": 1}]
+    },
+    "ignorePatterns": ["dist/*", "src/scratch.js"]
 }
