--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   ],
   "scripts": {
     "start": "node ./src/index.js",
-    "test": "jest --coverage",
+    "test": "node --experimental-vm-modules node_modules/.bin/jest",
     "clear_jest": "jest --clearCache",
     "make-badges": "istanbul-badges-readme",
     "build": "parcel build",
@@ -24,6 +24,14 @@
     "publish_patch": "npm install && npm version patch && npm publish && git push",
     "publish_minor": "npm install && npm version minor && npm publish && git push",
     "publish_major": "npm install && npm version major && npm publish && git push"
+  },
+  "jest": {
+    "transform": {
+      "^.+\\.[t|j]sx?$": "babel-jest"
+    },
+    "coverageReporters": [
+      "json-summary"
+    ]
   },
   "repository": {
     "type": "git",
@@ -57,24 +65,18 @@
   },
   "homepage": "https://github.com/stuwilmur/GRADE-DOH-model#readme",
   "devDependencies": {
-    "@babel/eslint-parser": "^7.19.1",
     "@babel/plugin-transform-modules-commonjs": "^7.21.2",
-    "eslint": "^8.37.0",
+    "@babel/preset-env": "^7.21.5",
+    "babel-eslint": "^10.1.0",
+    "babel-jest": "^29.5.0",
+    "eslint": "^8.41.0",
     "eslint-config-google": "^0.14.0",
-    "grade-doh-data": "^0.4.2",
+    "grade-doh-data": "^0.4.3",
     "istanbul-badges-readme": "^1.8.5",
     "jest": "^29.5.0",
     "parcel": "^2.8.0"
   },
   "dependencies": {
-    "micro-table": "^0.5.0"
-  },
-  "jest": {
-    "moduleNameMapper": {
-      "^d3$": "<rootDir>/node_modules/d3/dist/d3.min.js"
-    },
-    "coverageReporters": [
-      "json-summary"
-    ]
+    "micro-table": "^0.7.1"
   }
 }
