--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,20 +1,19 @@
 {
-    "parserOptions": {
-      "sourceType": "module",
-      "allowImportExportEverywhere": true,
-      "ecmaVersion": "latest"
-    },
-    "env": {
-        "browser": true,
-        "node":true,
-        "jest": true,
-        "es6": true
-    },
-    "extends": "google",
-    "overrides": [
-    ],
-    "rules": {
-        "indent": [2, 2, { "SwitchCase": 1}]
-    },
-    "ignorePatterns": ["dist/*", "src/scratch.js"]
+  "parserOptions": {
+    "sourceType": "module",
+    "allowImportExportEverywhere": true,
+    "ecmaVersion": "latest"
+  },
+  "env": {
+    "browser": true,
+    "node": true,
+    "jest": true,
+    "es6": true
+  },
+  "extends": "google",
+  "overrides": [],
+  "rules": {
+    "indent": [2, 2, {"SwitchCase": 1}]
+  },
+  "ignorePatterns": ["dist/*", "src/scratch.js"]
 }
